# test-better

./: .gitattributes  .gitignore  BACKLOG.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  clippy.toml  deny.toml  rust-toolchain.toml  rustfmt.toml
.github/workflows/: ci.yml  pages.yml
book/: book.toml
book/src/: SUMMARY.md  async-testing.md  fixtures.md  getting-started.md  introduction.md  migrating-from-assert.md  performance.md  property-testing.md  recipes.md  snapshots.md  writing-matchers.md
crates/test-better/: Cargo.toml
crates/test-better-async/: Cargo.toml
crates/test-better-async/src/: lib.rs
crates/test-better-core/: Cargo.toml
crates/test-better-core/src/: color.rs  context.rs  error.rs  lib.rs  or_fail.rs  render.rs  result.rs  runner.rs  structured.rs  trace.rs
crates/test-better-macros/: Cargo.toml
crates/test-better-macros/src/: lib.rs
crates/test-better-matchers/: Cargo.toml
crates/test-better-matchers/src/: collections.rs  combinators.rs  define.rs  description.rs  diff.rs  fixtures.rs  lib.rs  matcher.rs  numeric.rs  option_result.rs  predicate.rs  primitives.rs  satisfies.rs  soft.rs  strings.rs  subject.rs
crates/test-better-matchers/tests/: diff_golden.rs  ui.rs
crates/test-better-matchers/tests/golden/: multiline_string_diff.txt
crates/test-better-matchers/tests/ui/: forgotten_question_mark.rs  forgotten_question_mark.stderr
crates/test-better-property/: Cargo.toml
crates/test-better-property/src/: check.rs  lib.rs  property.rs  quickcheck_bridge.rs  strategy.rs
crates/test-better-property/tests/: shrink_output.rs
crates/test-better-property/tests/golden/: shrunk_failure.txt
crates/test-better-runner/: Cargo.toml
crates/test-better-runner/src/: lib.rs  main.rs
crates/test-better-runner/tests/: exit_code_parity.rs  grouping.rs  summary.rs
crates/test-better-runner/tests/fixtures/all-pass/: Cargo.toml
crates/test-better-runner/tests/fixtures/all-pass/src/: lib.rs
crates/test-better-runner/tests/fixtures/has-failures/: Cargo.toml
crates/test-better-runner/tests/fixtures/has-failures/src/: lib.rs
crates/test-better-runner/tests/fixtures/mixed-results/: Cargo.toml
crates/test-better-runner/tests/fixtures/mixed-results/src/: lib.rs
crates/test-better-runner/tests/fixtures/structured-failures/: Cargo.toml
crates/test-better-runner/tests/fixtures/structured-failures/src/: lib.rs
crates/test-better-snapshot/: Cargo.toml
crates/test-better-snapshot/src/: accept.rs  inline.rs  lib.rs  redact.rs
crates/test-better-snapshot/tests/: accept.rs  lifecycle.rs
crates/test-better/benches/: check_overhead.rs  expect_overhead.rs
crates/test-better/src/: cookbook.rs  lib.rs
crates/test-better/tests/: async_check.rs  async_expect.rs  eventually.rs  fixtures.rs  property.rs  property_quickcheck.rs  smoke.rs  snapshot.rs  soft_assertions.rs  structural_matchers.rs  test_case.rs  trace.rs  ui.rs
crates/test-better/tests/snapshots/: snapshot__redacted_session.snap  snapshot__rendered_page.snap  snapshot__report.snap
crates/test-better/tests/ui/: fixture_bad_scope.rs  fixture_bad_scope.stderr  fixture_with_params.rs  fixture_with_params.stderr  missing_field_without_rest.rs  missing_field_without_rest.stderr  rest_not_last.rs  rest_not_last.stderr  sync_satisfies_on_future.rs  sync_satisfies_on_future.stderr  sync_to_on_future.rs  sync_to_on_future.stderr  test_case_missing_label.rs  test_case_missing_label.stderr  test_case_trailing_garbage.rs  test_case_trailing_garbage.stderr  test_case_wrong_arity.rs  test_case_wrong_arity.stderr  unknown_field.rs  unknown_field.stderr
examples/custom-matcher/: Cargo.toml
examples/custom-matcher/src/: lib.rs
examples/property-roundtrip/: Cargo.toml
examples/property-roundtrip/src/: lib.rs
examples/snapshot-html/: Cargo.toml
examples/snapshot-html/src/: lib.rs
examples/state-machine/: Cargo.toml
examples/state-machine/src/: lib.rs
examples/web-handler-tests/: Cargo.toml
examples/web-handler-tests/src/: lib.rs
public-api/: README.md  test-better-async.txt  test-better-core.txt  test-better-macros.txt  test-better-matchers.txt  test-better-property.txt  test-better-runner.txt  test-better-snapshot.txt  test-better.txt
scripts/: check-public-api.sh  check-test-api.sh
tests/timeout-async-std/: Cargo.toml
tests/timeout-async-std/src/: lib.rs
tests/timeout-no-runtime/: Cargo.toml
tests/timeout-no-runtime/src/: lib.rs
tests/timeout-no-runtime/tests/: ui.rs
tests/timeout-no-runtime/tests/ui/: eventually_missing_runtime.rs  eventually_missing_runtime.stderr  missing_runtime_feature.rs  missing_runtime_feature.stderr
tests/timeout-smol/: Cargo.toml
tests/timeout-smol/src/: lib.rs
tests/timeout-tokio/: Cargo.toml
tests/timeout-tokio/src/: lib.rs
