[workspace]
resolver = "3"
members = [
    "crates/test-better",
    "crates/test-better-core",
    "crates/test-better-matchers",
    "crates/test-better-macros",
    "crates/test-better-async",
    "crates/test-better-property",
    "crates/test-better-snapshot",
    "crates/test-better-runner",
    "examples/custom-matcher",
    "examples/web-handler-tests",
    "examples/state-machine",
    "examples/property-roundtrip",
    "examples/snapshot-html",
    # Confirms `to_complete_within` is a compile error with no runtime feature.
    # Safe as a member: it enables no runtime feature (Iteration 5.2).
    "tests/timeout-no-runtime",
]
# The per-runtime `to_complete_within` integration crates are deliberately
# *outside* the workspace. Each enables exactly one of `tokio`/`async-std`/
# `smol` on `test-better`; if they were members, a workspace-wide
# `--all-features` build would unify all three runtime features into one
# `test-better`, and tests written for one runtime would run against another.
# Each is exercised on its own (`cargo test --manifest-path ...`) in CI
# (Iteration 5.2).
exclude = [
    "tests/timeout-tokio",
    "tests/timeout-async-std",
    "tests/timeout-smol",
]

# Shared package metadata. Every crate is versioned in lockstep
# (PROJECT_BUILD_PLAN.md §2).
[workspace.package]
version = "1.0.0"
edition = "2024"
rust-version = "1.95.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/joshburgess/test-better"
authors = ["Josh Burgess"]
categories = ["development-tools::testing"]
keywords = ["testing", "assertions", "matchers", "expect"]

# Internal crates are referenced through the workspace so versions stay in lockstep.
[workspace.dependencies]
# The facade crate, depended on by the workspace's own examples.
test-better = { version = "1.0.0", path = "crates/test-better" }
test-better-core = { version = "1.0.0", path = "crates/test-better-core" }
# `default-features = false` here so a dependent crate's own feature set is the
# single switch for the matcher `diff` feature (the facade re-exposes it).
test-better-matchers = { version = "1.0.0", path = "crates/test-better-matchers", default-features = false }
test-better-macros = { version = "1.0.0", path = "crates/test-better-macros" }
test-better-async = { version = "1.0.0", path = "crates/test-better-async" }
test-better-property = { version = "1.0.0", path = "crates/test-better-property" }
test-better-snapshot = { version = "1.0.0", path = "crates/test-better-snapshot" }
test-better-runner = { version = "1.0.0", path = "crates/test-better-runner" }

# Workspace-wide lints. Per PROJECT_BUILD_PLAN.md §3, `src/` must be free of
# `.unwrap()`, `.expect()`, and `panic!`. clippy.toml allows unwrap/expect in
# tests. The `[workspace.lints]` table is filled in here (rather than in a later
# iteration) so each crate manifest is stable from the moment it is created.
[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"

# Note: `missing_docs` is intentionally NOT enabled yet. Per PROJECT_BUILD_PLAN.md
# §3 it is turned on by the end of Phase 10, once every public item is documented.
# Enabling it now would fail `cargo clippy -- -D warnings` on empty scaffolding.
