[package]
name = "test-better-async"
description = "Async and timing test helpers (runtime-gated) for the test-better testing library."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true

[lints]
workspace = true
