[package]
name = "test-better-core"
description = "Core error and result types (`TestError`, `TestResult`) for the test-better testing library."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true

[features]
default = []
# Derives `serde::{Serialize, Deserialize}` on the structured-failure types
# (`StructuredError` and friends). Per PROJECT_BUILD_PLAN.md §3, the structured
# form is what tooling and the Phase 9 runner consume; serde is the wire format.
serde = ["dep:serde"]

[dependencies]
serde = { version = "1.0", optional = true, features = ["derive"] }

[dev-dependencies]
# Used only by the `#[cfg(feature = "serde")]` round-trip tests.
serde_json = "1.0"

[lints]
workspace = true
