[package]
name = "test-better-core"
description = "Core error and result types (`TestError`, `TestResult`) for the test-better testing library."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true

[features]
default = []
# Derives `serde::{Serialize, Deserialize}` on the structured-failure types
# (`StructuredError` and friends) and pulls in `serde_json`, which the runner
# channel (`crate::runner`) uses as its wire format. Per PROJECT_BUILD_PLAN.md
# §3, the structured form is what tooling and the Phase 9 runner consume.
serde = ["dep:serde", "dep:serde_json"]

[dependencies]
serde = { version = "1.0", optional = true, features = ["derive"] }
# Behind the `serde` feature: the structured-output channel serializes a
# `StructuredError` to one marker-wrapped JSON line for the runner to consume.
serde_json = { version = "1.0", optional = true }

[dev-dependencies]
# Dogfooding (PROJECT_BUILD_PLAN.md Iteration 2.5): this crate's own tests use
# `expect!` and the matchers. `test-better-matchers` depends on this crate, so
# this is a dev-dependency cycle, which Cargo permits because dev-dependencies
# are not part of the normal build graph.
test-better-matchers = { workspace = true }

[lints]
workspace = true
