[package]
name = "test-better-core"
description = "Core error and result types (`TestError`, `TestResult`) for the test-better testing library."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true
# Workspace README, packaged into every crate so the crates.io page shows it.
readme = "../../README.md"

[features]
default = []
# Derives `serde::{Serialize, Deserialize}` on the structured-failure types
# (`StructuredError` and friends) and pulls in `serde_json`, which the runner
# channel (`crate::runner`) uses as its wire format. The structured form is
# what tooling and the runner consume.
serde = ["dep:serde", "dep:serde_json"]

[dependencies]
serde = { version = "1.0", optional = true, features = ["derive"] }
# Behind the `serde` feature: the structured-output channel serializes a
# `StructuredError` to one marker-wrapped JSON line for the runner to consume.
serde_json = { version = "1.0", optional = true }

[dev-dependencies]
# Dogfooding: this crate's own tests use
# `expect!` and the matchers. `test-better-matchers` depends on this crate, so
# this is a dev-dependency cycle, which Cargo permits because dev-dependencies
# are not part of the normal build graph. It is declared path-only (rather than
# through `workspace = true`, which carries a version): Cargo drops a path-only
# dev-dependency from the published manifest, so the cycle does not block
# `cargo publish` (the dependency is published after this crate).
test-better-matchers = { path = "../test-better-matchers", default-features = false }

# Render docs.rs with every feature on, so feature-gated APIs are visible.
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true
