[package]
name = "test-better-macros"
description = "Procedural macros for the test-better testing library."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true
# Workspace README, packaged into every crate so the crates.io page shows it.
readme = "../../README.md"

[lib]
proc-macro = true

[dependencies]
# `matches_struct!` and friends parse a struct/tuple/enum pattern of inner
# matcher expressions and emit a `Matcher` impl.
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"

# Render docs.rs with every feature on, so feature-gated APIs are visible.
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true
