[package]
name = "test-better-matchers"
description = "Matcher trait, standard matchers, and the `expect!` macro for the test-better testing library."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
test-better-core = { workspace = true }
# Backs the `diff` feature's line-oriented diff renderer (Iteration 2.4).
similar = { version = "2", optional = true }
# Backs the `regex` feature's `matches_regex` matcher (Iteration 3.4).
regex = { version = "1", optional = true }

[features]
# `diff` is on by default: a diff is the readable way to show a multi-line
# mismatch. It is split out so a build that does not want the `similar`
# dependency can opt out with `--no-default-features`.
default = ["diff"]
diff = ["dep:similar"]
# `regex` is off by default: `matches_regex` is the one matcher that pulls in
# the `regex` crate, so it is opt-in.
regex = ["dep:regex"]

[dev-dependencies]
# Drives the compile-fail test that a forgotten `?` on `expect!(..)` is a
# warning (Iteration 2.3).
trybuild = "1.0"
# A dependency-free `block_on`, so the async `expect!` tests and doc examples
# can drive a future without pulling in a full runtime (Iteration 5.1).
pollster = "0.4"

[lints]
workspace = true
