[package]
name = "test-better-matchers"
description = "Matcher trait, standard matchers, and the `expect!` macro for the test-better testing library."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
test-better-core = { workspace = true }
# Backs `Subject::to_complete_within`: the runtime-agnostic timeout primitive
# and the `RuntimeAvailable` gate (Iteration 5.2). The runtime features below
# forward to it.
test-better-async = { workspace = true }
# Backs the `diff` feature's line-oriented diff renderer (Iteration 2.4).
similar = { version = "2", optional = true }
# Backs the `regex` feature's `matches_regex` matcher (Iteration 3.4).
regex = { version = "1", optional = true }

[features]
# `diff` is on by default: a diff is the readable way to show a multi-line
# mismatch. It is split out so a build that does not want the `similar`
# dependency can opt out with `--no-default-features`.
default = ["diff"]
diff = ["dep:similar"]
# `regex` is off by default: `matches_regex` is the one matcher that pulls in
# the `regex` crate, so it is opt-in.
regex = ["dep:regex"]
# Runtime selectors for `Subject::to_complete_within`, forwarded to
# `test-better-async`. Exactly one is meant to be enabled; with none, calling
# `to_complete_within` is a compile error pointing at these flags
# (Iteration 5.2).
tokio = ["test-better-async/tokio"]
async-std = ["test-better-async/async-std"]
smol = ["test-better-async/smol"]

[dev-dependencies]
# Drives the compile-fail test that a forgotten `?` on `expect!(..)` is a
# warning (Iteration 2.3).
trybuild = "1.0"
# A dependency-free `block_on`, so the async `expect!` tests and doc examples
# can drive a future without pulling in a full runtime (Iteration 5.1).
pollster = "0.4"

[lints]
workspace = true
