[package]
name = "test-better-matchers"
description = "Matcher trait, standard matchers, and the `expect!` macro for the test-better testing library."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true
# Workspace README, packaged into every crate so the crates.io page shows it.
readme = "../../README.md"

[dependencies]
test-better-core = { workspace = true }
# Backs `Subject::completes_within`: the runtime-agnostic timeout primitive
# and the `RuntimeAvailable` gate. The runtime features below forward to it.
test-better-async = { workspace = true }
# Backs `Subject::matches_snapshot`: the file-backed snapshot store and its
# compare/update logic. This crate renders the resulting `SnapshotFailure` into
# a `TestError`, with a diff when the `diff` feature is on.
test-better-snapshot = { workspace = true }
# Backs the `diff` feature's line-oriented diff renderer.
similar = { version = "2", optional = true }
# Backs the `regex` feature's `matches_regex` matcher.
regex = { version = "1", optional = true }

[features]
# `diff` is on by default: a diff is the readable way to show a multi-line
# mismatch. It is split out so a build that does not want the `similar`
# dependency can opt out with `--no-default-features`.
default = ["diff"]
diff = ["dep:similar"]
# `regex` is off by default: `matches_regex` is the one matcher that pulls in
# the `regex` crate, so it is opt-in.
regex = ["dep:regex"]
# Runtime selectors for `Subject::completes_within`, forwarded to
# `test-better-async`. Exactly one is meant to be enabled; with none, calling
# `completes_within` is a compile error pointing at these flags.
tokio = ["test-better-async/tokio"]
async-std = ["test-better-async/async-std"]
smol = ["test-better-async/smol"]

[dev-dependencies]
# Drives the compile-fail test that a forgotten `?` on `expect!(..)` is a
# warning.
trybuild = "1.0"
# A dependency-free `block_on`, so the async `expect!` tests and doc examples
# can drive a future without pulling in a full runtime.
pollster = "0.4"

# Render docs.rs with every feature on, so feature-gated APIs are visible.
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true
