[package]
name = "test-better-property"
description = "Property-testing bridge for the test-better testing library."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true

[lints]
workspace = true
