[package]
name = "test-better-runner"
description = "Optional pretty test runner (`cargo-test-better`) for the test-better testing library."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true

[[bin]]
name = "cargo-test-better"
path = "src/main.rs"

[lints]
workspace = true
