[package]
name = "test-better-runner"
description = "Optional pretty test runner (`cargo-test-better`) for the test-better testing library."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true
# Workspace README, packaged into every crate so the crates.io page shows it.
readme = "../../README.md"

[[bin]]
name = "cargo-test-better"
path = "src/main.rs"

[dependencies]
# The runner consumes the structured failure form (`StructuredError`), so it
# needs the facade built with `serde`. It also dogfoods `check!`/`TestResult`,
# so this single dependency covers both the runtime and the test needs.
test-better = { workspace = true, features = ["serde"] }
# The wire format of the structured-output channel: each marker-wrapped line is
# one `serde_json`-encoded `StructuredError`.
serde_json = "1.0"

# Render docs.rs with every feature on, so feature-gated APIs are visible.
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true
