[package]
name = "test-better-snapshot"
description = "Snapshot testing for the test-better testing library."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true
# Workspace README, packaged into every crate so the crates.io page shows it.
readme = "../../README.md"

# The runtime half of this crate is `std`-only: it is the storage-and-comparison
# core, and turning a `SnapshotFailure` into a rendered `TestError` is
# `test-better-matchers`' job. `syn`/`proc-macro2` are pulled in *only* behind
# the `accept` feature, which builds the `test-better-accept` companion binary
# that rewrites inline-snapshot literals in source files.
[dependencies]
syn = { version = "2", features = ["full", "visit", "parsing"], optional = true }
proc-macro2 = { version = "1", features = ["span-locations"], optional = true }

[features]
# Builds the `test-better-accept` binary and exposes the `accept` module. Off by
# default: ordinary test runs only need the `std`-only runtime half.
accept = ["dep:syn", "dep:proc-macro2"]

# The accept-step binary. Gated on the `accept` feature so a default build of
# the crate stays dependency-free.
[[bin]]
name = "test-better-accept"
required-features = ["accept"]

[dev-dependencies]
# Dogfooding: this crate's own tests assert with `expect!`. `test-better-matchers`
# depends on `test-better-snapshot`, so this is a dev-dependency cycle, which
# Cargo permits (the same arrangement as `test-better-async`). Both are declared
# path-only so Cargo drops them from the published manifest and the cycle does
# not block `cargo publish`. `test-better-core` is not itself a cycle, but is
# kept path-only for consistency (it is published before this crate, so a
# versioned entry would also be valid).
test-better-core = { path = "../test-better-core" }
test-better-matchers = { path = "../test-better-matchers", default-features = false }

# Render docs.rs with every feature on, so feature-gated APIs are visible.
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true
