[package]
name = "test-better"
description = "Result-returning tests with `?`: composable matchers, rich failure output, no `.unwrap()`."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
test-better-core = { workspace = true }
# The workspace pins this with `default-features = false`; this crate's own
# `diff` feature is the single switch that turns the matcher diff renderer on.
test-better-matchers = { workspace = true }
# The structural matcher macros (`matches_struct!` and friends). Their
# generated code refers back to this facade crate, so they ship through it.
test-better-macros = { workspace = true }
# The property-testing bridge: the `Strategy<T>` seam and the `check` runner
# (Phase 6). Re-exported so a property test needs only the facade dependency.
test-better-property = { workspace = true }

[dev-dependencies]
# Drives the compile-fail tests for the structural matcher macros: a missing
# field without `..`, an unknown field, a misplaced `..` (Iteration 3.7). Also
# locks that the sync `to` is not usable on a future-typed subject (5.1).
trybuild = "1.0"
# Two runtimes for the async `expect!` integration tests, demonstrating that
# `resolves_to` is runtime-agnostic: `pollster` is a dependency-free
# `block_on`, `tokio` drives the `#[tokio::test]` path (Iteration 5.1).
pollster = "0.4"
tokio = { version = "1", features = ["rt", "macros", "time"] }

[features]
default = ["diff"]
# Forwards `test-better-matchers`'s `diff` feature: a line-oriented diff for
# multi-line mismatches. On by default; opt out with `--no-default-features`.
diff = ["test-better-matchers/diff"]
# Forwards `test-better-matchers`'s `regex` feature: the `matches_regex`
# matcher. Off by default; it is the one matcher that pulls in `regex`.
regex = ["test-better-matchers/regex"]
# Forwards `test-better-property`'s `quickcheck` feature: the best-effort
# `quickcheck` bridge (`arbitrary::<T>()`). Off by default; `proptest` is the
# primary property-testing backend and needs no feature flag.
quickcheck = ["test-better-property/quickcheck"]
# Forwards `test-better-core`'s `serde` feature: derives serde on the
# structured-failure types (see that crate for details).
serde = ["test-better-core/serde"]
# Runtime selectors for `expect!(fut).to_complete_within(..)`, forwarded down
# through `test-better-matchers` to `test-better-async`. Enable exactly one;
# with none, calling `to_complete_within` is a compile error naming these
# flags (Iteration 5.2).
tokio = ["test-better-matchers/tokio"]
async-std = ["test-better-matchers/async-std"]
smol = ["test-better-matchers/smol"]

[lints]
workspace = true
