[package]
name = "test-better"
description = "Result-returning tests with `?`: composable matchers, rich failure output, no `.unwrap()`."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true
# Workspace README, packaged into every crate so the crates.io page shows it.
readme = "../../README.md"

[dependencies]
test-better-core = { workspace = true }
# The workspace pins this with `default-features = false`; this crate's own
# `diff` feature is the single switch that turns the matcher diff renderer on.
test-better-matchers = { workspace = true }
# The structural matcher macros (`matches_struct!` and friends). Their
# generated code refers back to this facade crate, so they ship through it.
test-better-macros = { workspace = true }
# The property-testing bridge: the `Strategy<T>` seam and the `check` runner.
# Re-exported so a property test needs only the facade dependency.
test-better-property = { workspace = true }
# The snapshot store behind `check!(value).matches_snapshot("name")`.
# The method itself lives on `Subject` in `test-better-matchers`; this dependency
# is for re-exporting the lower-level snapshot API through the facade.
test-better-snapshot = { workspace = true }

[dev-dependencies]
# Drives the compile-fail tests for the structural matcher macros: a missing
# field without `..`, an unknown field, a misplaced `..`. Also locks that the
# sync `satisfies` is not usable on a future-typed subject.
trybuild = "1.0"
# Two runtimes for the async `check!` integration tests, demonstrating that
# `resolves_to` is runtime-agnostic: `pollster` is a dependency-free
# `block_on`, `tokio` drives the `#[tokio::test]` path.
pollster = "0.4"
tokio = { version = "1", features = ["rt", "macros", "time"] }

# `check!` overhead versus the stock assert macros. A `harness = false`
# benchmark: an ordinary `fn main` timed with `Instant`, so it needs no
# benchmark framework and adds nothing to the dependency tree.
[[bench]]
name = "check_overhead"
harness = false

[features]
default = ["diff"]
# Forwards `test-better-matchers`'s `diff` feature: a line-oriented diff for
# multi-line mismatches. On by default; opt out with `--no-default-features`.
diff = ["test-better-matchers/diff"]
# Forwards `test-better-matchers`'s `regex` feature: the `matches_regex`
# matcher. Off by default; it is the one matcher that pulls in `regex`.
regex = ["test-better-matchers/regex"]
# Forwards `test-better-property`'s `quickcheck` feature: the best-effort
# `quickcheck` bridge (`arbitrary::<T>()`). Off by default; `proptest` is the
# primary property-testing backend and needs no feature flag.
quickcheck = ["test-better-property/quickcheck"]
# Forwards `test-better-core`'s `serde` feature: derives serde on the
# structured-failure types (see that crate for details).
serde = ["test-better-core/serde"]
# Runtime selectors for `check!(fut).completes_within(..)`, forwarded down
# through `test-better-matchers` to `test-better-async`. Enable exactly one;
# with none, calling `completes_within` is a compile error naming these
# flags.
tokio = ["test-better-matchers/tokio"]
async-std = ["test-better-matchers/async-std"]
smol = ["test-better-matchers/smol"]

# Render docs.rs with every feature on, so the runtime-gated and otherwise
# off-by-default APIs are visible. `--cfg docsrs` is set so any future
# `#[cfg_attr(docsrs, doc(cfg(feature = "..."))]` annotations light up; nothing
# in the source uses it today, but the convention costs nothing.
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true
