[package]
name = "property-roundtrip-example"
description = "Property testing a roundtrip with `test-better`: encode then decode is the identity."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[dependencies]
test-better = { workspace = true }

[lints]
workspace = true
