[package]
name = "snapshot-html-example"
description = "Snapshot testing rendered HTML with `test-better`: inline snapshots of a small renderer."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[dependencies]
test-better = { workspace = true }

[lints]
workspace = true
