[package]
name = "web-handler-tests-example"
description = "Testing request handlers with `test-better`: status codes, bodies, and structural matchers."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[dependencies]
test-better = { workspace = true }

[lints]
workspace = true
