[package]
name = "timeout-no-runtime"
description = "Compile-fail coverage: runtime-gated async assertions without a runtime feature."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[dependencies]
# No runtime feature on purpose: this crate's whole job is to prove that a
# `to_complete_within` call without one fails to compile, with a clear message.
test-better = { workspace = true }

[dev-dependencies]
trybuild = "1.0"

[lints]
workspace = true
