# Outside the workspace on purpose (see the root Cargo.toml `exclude` note):
# this crate pins `test-better`'s runtime feature to `smol`. Workspace
# inheritance is unavailable here, so the manifest is spelled out in full.
[package]
name = "timeout-smol"
description = "Integration coverage for `completes_within` on the smol runtime."
version = "0.0.0"
edition = "2024"
rust-version = "1.95.0"
publish = false

[dependencies]
test-better = { path = "../../crates/test-better", features = ["smol"] }

[dev-dependencies]
smol = "2"
